--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
     <!-- Highlight.js for syntax highlighting (Self-hosted) -->
     <link rel="stylesheet" href="./libs/highlight.js/styles/github.min.css" />
     <link rel="stylesheet" href="./libs/highlight.js/styles/github-dark.min.css" media="(prefers-color-scheme: dark)" />
-    <script defer src="./libs/highlight.js/highlight.min.js"></script>
+    <!-- highlight.min.js 按需加载 -->
 
     <!-- KaTeX for math formula rendering (Self-hosted) -->
     <link rel="stylesheet" href="./libs/katex/katex.min.css" />
-    <script defer src="./libs/katex/katex.min.js"></script>
+    <!-- katex.min.js 按需加载 -->
 
-    <!-- gif.js for GIF compression (Self-hosted) -->
-    <script defer src="./libs/gif.js/gif.js"></script>
+    <!-- gif.js 按需加载 -->
 
-    <!-- DataGridXL for spreadsheet-like editing (Self-hosted, no CSS needed - styled via JS theme) -->
-    <script defer src="./libs/datagridxl/datagridxl2.js"></script>
+    <!-- datagridxl2.js 按需加载 -->
 
     <!-- Main CSS (includes Tailwind) -->
     <link rel="stylesheet" href="./index.css">
